# ppplca

./: .gitignore  CITATION.cff  LICENSE  README.md  __init__.py  databases_setup.py  main.py  pyproject.toml
.github/workflows/: workflow.yml
app/: config.py
app/Actions/: CreateAgriActivities.py  CreateHeatActivities.py  CreateParams.py  FindActivityLocation.py  Plot.py  bw_base_set_up.py  import_agrifootprint_db_functions.py  name_match.py
app/Commands/: InstallCommand.py  SetupDatabaseCommand.py
app/Models/: Activity.py  Country.py  Exchange.py  LCA.py  LCAResults.py  ProductionStage.py  ValueChain.py
data/activity_names/: activity_names.csv  activity_names.xlsx
data/grid_shares/: Electricity_grid_shares_CN_pea.csv  Electricity_grid_shares_CN_soy.csv  Electricity_grid_shares_CN_wheat.csv  Electricity_grid_shares_US_soy.csv  Electricity_grid_shares_US_wheat.csv
data/production_countries/: production_countries_pea_Europe.csv  production_countries_soy_Europe.csv  production_countries_wheat_Europe.csv
data/regionalization_setup/: Ecoinvent_310_to_IMAGE_conversion.csv  Locations_in_lca_db_new.csv  Scherer_land_use_match.csv  cf_aware_processed.csv  cf_biodiversity_processed_new.csv  cf_pm_image_regions.csv
data/transport/: Distances_european_countries_final.csv  Europe_distance_from_port.csv  European_countries.csv  Production_to_port_distance.csv  Transport_Data.xlsx  Transport_between_ports.csv
ppplca/: __init__.py  config.py  main.py
ppplca/Actions/: CreateAgriActivities.py  CreateHeatActivities.py  CreateParams.py  FindActivityLocation.py  Plot.py  bw_base_set_up.py  import_agrifootprint_db_functions.py  name_match.py
ppplca/Commands/: InstallCommand.py  RunCommand.py  SetupDatabaseCommand.py
ppplca/Models/: Activity.py  Country.py  Exchange.py  LCA.py  LCAResults.py  ProductionStage.py  ValueChain.py
ppplca/data/activity_names/: activity_names.csv
ppplca/data/grid_shares/: Electricity_grid_shares_CN_pea.csv  Electricity_grid_shares_CN_soy.csv  Electricity_grid_shares_CN_wheat.csv  Electricity_grid_shares_US_soy.csv  Electricity_grid_shares_US_wheat.csv
ppplca/data/production_countries/: production_countries_pea_Europe.csv  production_countries_soy_Europe.csv  production_countries_wheat_Europe.csv
ppplca/data/regionalization_setup/: Agrifootprint_6_economic_new.json  Country.xlsx  Ecoinvent_310_to_IMAGE_conversion.csv  Locations_in_lca_db_new.csv  Scherer_land_use_match.csv  (+4 more)
ppplca/stubs/: Processing_data.xlsx  config.ini  value_chains.xlsx
stubs/: config.ini
(+5 files in other folders)
