[project]
name = "ppplca"
version = "0.2.0"
description = ""
authors = [
    {name = "Armin Siegrist",email = "armin.siegrist@hest.ethz.ch", url = "https://github.com/siegarmi" }
    {name = "Paride Azzari",email = "paride21azzari@gmail.com", url = "https://github.com/azzarip" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.26)",
    "pandas (>=2.2)",
    "bw2data (>=3.6)",
    "bw2io (>=0.8)",
    "lca_algebraic (>=1.1)",
    "matplotlib (>=3.9)"
    "ecoinvent_interface (==2.5)"
]

include = [
    { path = "ppplca/stubs", format = "directory" },
    { path = "ppplca/data", format = "directory" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
