[project]
name = "ppplca"
version = "0.2.33"
description = ""
authors = [
    {name = "Armin Siegrist",email = "armin.siegrist@hest.ethz.ch"},
    {name = "Paride Azzari",email = "paride21azzari@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.26)",
    "pandas (>=2.2)",
    "brightway2 (>=2.4)",
    "siegrist-lca-algebraic",
    "matplotlib (>=3.9)",
    "ecoinvent_interface (==3.1)"
]

include = [
    { path = "ppplca/stubs", format = "directory" },
    { path = "ppplca/data", format = "directory" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Repository = "https://github.com/siegarmi/ppplca"